# entity-extractor-service

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile
entity_extractor_service/: constants.py  entity_extractor_model.py  main.py
entity_extractor_service/service/: factory.py
entity_extractor_service/service/handlers/: entity_extractor_handler.py  json_handler.py  liveness_handler.py  request_body.py
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-chart/templates/tests/: test-connection.yaml
validation/: requests.http
